[package]
name = "monolith-finder"
version = "0.1.0"
authors = ["kahomayo <kahomayo@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
java-rand = "0.2"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[[bin]]
name = "testbin"
path = "src/bin.rs"